tests/test030.err
error: test030.tig:4:12: too many fields for type `t': b
