tests/test030.tig
/* ERR: too many fields */
let
  type t = {a:int}
  var x := t {a=42, b=56}
in
end
